samples/_failures_safe/1761646552_29ca41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06320227.c: In function ‘main’:
./samples/SAFE/__tmp_06320227.c:151:42: error: expected ‘)’ at end of input
  151 |     if (scanf("%d", &src) != 1 || src < 0
      |        ~                                 ^
      |                                          )
./samples/SAFE/__tmp_06320227.c:151:5: error: expected declaration or statement at end of input
  151 |     if (scanf("%d", &src) != 1 || src < 0
      |     ^~
